# minimcp

./: .cursorrules  .gitignore  CONTRIBUTING.md  DETAILS.md  README.md  main.py  pyproject.toml
.github/workflows/: pre-commit.yml  pytest.yml  rust.yml
benchmarks/: README.md  analyze_results.py  configs.py
benchmarks/core/: cpu_affinity.py  mcp_server_benchmark.py  memory_baseline.py  memory_helpers.py  sample_tools.py  server_monitor.py
benchmarks/insights/: concurrency_scaling_analysis.md
benchmarks/macro/: http_mcp_server_benchmark.py  scenarios.py  stdio_mcp_server_benchmark.py  streamable_http_mcp_server_benchmark.py  tool_helpers.py
benchmarks/macro/servers/: fastmcp_http_server.py  fastmcp_stdio_server.py  mcp_lowlevel_stdio_server.py  mcp_lowlevel_streamable_http_server.py  minimcp_http_server.py  minimcp_stdio_server.py  minimcp_streamable_http_server.py
benchmarks/profiles/: profile_minimcp.py  profile_streamable_http.py
benchmarks/reports/: BENCHMARK_ANALYSIS_REPORT.md  MINIMCP_VS_FASTMCP_ANALYSIS.md  http_mcp_server_async_benchmark_results.json  http_mcp_server_io_bound_async_benchmark_results.json  http_mcp_server_noop_benchmark_results.json  http_mcp_server_sync_benchmark_results.json  stdio_mcp_server_async_benchmark_results.json  stdio_mcp_server_io_bound_async_benchmark_results.json  stdio_mcp_server_noop_benchmark_results.json  stdio_mcp_server_sync_benchmark_results.json  streamable_http_mcp_server_async_benchmark_results.json  streamable_http_mcp_server_io_bound_async_benchmark_results.json  streamable_http_mcp_server_noop_benchmark_results.json  streamable_http_mcp_server_sync_benchmark_results.json
docs/: ISSUES.md  sample-mcp-messages.md  testing-guide.md  transport-specification-compliance.md
examples/math_mcp/: http_server.py  math_mcp.py  stdio_server.py  streamable_http_server.py
examples/math_mcp_server/: fastapi.py  fastapi_http.py  fastapi_streamable_http.py  math_mcp.py  messages.md  stdio.py  stdio_custom_handler.py
examples/servers/: fastapi.py  math_mcp_server.py
examples/web_frameworks/: django_wsgi_server_with_auth.py  fastapi_http_server_with_auth.py  issue_tracker_mcp.py
rust/: .pre-commit-config.yaml  CONTRIBUTING.md  Cargo.toml  README.md  rust-toolchain.toml
rust/crates/minimcp/: Cargo.toml
rust/crates/minimcp-bench-server/: Cargo.toml
rust/crates/minimcp-bench-server/src/: lib.rs  memory.rs  tools.rs
rust/crates/minimcp/src/: context.rs  error.rs  json_rpc.rs  lib.rs  mcp_types.rs  responder.rs  server.rs  time_limiter.rs  types.rs
rust/crates/minimcp/src/managers/: mod.rs  tool.rs
rust/crates/minimcp/src/transports/: http.rs  mod.rs  stdio.rs
rust/crates/minimcp/tests/: end_to_end.rs
src/minimcp/: __init__.py  exceptions.py  limiter.py  minimcp.py  responder.py  time_limiter.py  types.py
src/minimcp/managers/: context_manager.py  prompt_manager.py  resource_manager.py  tool_manager.py
src/minimcp/server/: __init__.py  exceptions.py  json_rpc.py  limiter.py  minimcp.py  responder.py  server.py  server_core.py  types.py  utils.py
src/minimcp/server/lowlevel/: core.py
src/minimcp/server/managers/: context_manager.py  prompt_manager.py  resource_manager.py  tool_manager.py
src/minimcp/server/transports/: __init__.py  http.py  http_transport_base.py  starlette.py  stdio.py  streamable_http.py  types.py
src/minimcp/transports/: base_http.py  http.py  stdio.py  streamable_http.py
src/minimcp/utils/: func.py  json_rpc.py  mcp_func.py  model.py  task_status_wrapper.py
tests/: conftest.py
tests/integration/: __init__.py  conftest.py  math_server_stdio.py  test_http_server.py  test_mcp_http.py  test_mcp_stdio.py  test_stdio_server.py  test_streamable_http_server.py
tests/integration/helpers/: client_session_with_init.py  http.py  process.py
tests/integration/servers/: http_server.py  math_mcp.py  stdio_server.py
tests/server/decorators/: test_tool_manager.py
tests/server/managers/: test_tool_manager.py
tests/server/transports/: test_http.py  test_http_transport_base.py  test_starlette.py  test_stdio.py  test_stdio_transport.py
tests/unit/: test_limiter.py  test_minimcp.py  test_responder.py  test_time_limiter.py
tests/unit/managers/: test_context_manager.py  test_prompt_manager.py  test_resource_manager.py  test_tool_manager.py
tests/unit/server/: test_limiter.py  test_minimcp.py  test_responder.py
tests/unit/server/managers/: test_context_manager.py  test_prompt_manager.py  test_resource_manager.py  test_tool_manager.py
tests/unit/server/transports/: test_http.py  test_http_transport_base.py  test_starlette.py  test_streamable_http.py
tests/unit/transports/: test_base_http_transport.py  test_http_transport.py  test_stdio_transport.py  test_streamable_http_transport.py
tests/unit/utils/: test_json_rpc.py  test_mcp_func.py
tests/utils/: test_func.py  test_task_status_wrapper.py
