[project]
name = "minimcp"
version = "0.2.2"
description = "A minimal, stateless, and lightweight MCP server designed for easy integration into any Python application."
authors = [{ name = "Sreenath Somarajapuram", email = "somarajapuram@gmail.com" }]
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.10"
dependencies = [
    "mcp>=1.12.3",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "build>=1.3.0",
    "fastapi>=0.116.1",
    "pre-commit>=4.3.0",
    "pre-commit-uv>=4.1.4",
    "pyright>=1.1.403",
    "pytest>=8.4.1",
    "pytest-asyncio>=1.1.0",
    "ruff>=0.12.8",
    "twine>=6.1.0",
    "uvicorn>=0.35.0",
]

[project.scripts]
stdio-math-server = "examples.math_mcp_server.stdio:main"

[tool.ruff]
target-version = "py310"
line-length = 120
exclude = ["README.md", "venv", ".venv"]

[tool.ruff.lint]
select = ["C4", "E", "F", "I", "PERF", "UP"]

[tool.ruff.format]
quote-style = "double"

[tool.markdown.lint]
MD029 = false
MD013 = false
MD033 = false
MD041 = false
