[project]
name = "minimcp"
version = "0.3.4"
description = "A minimal, stateless, and lightweight framework for building remote MCP servers."
authors = [{ name = "Sreenath Somarajapuram", email = "somarajapuram@gmail.com" }]
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
classifiers = [
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Framework :: AsyncIO",
    "Topic :: Software Development :: Libraries",
]

dependencies = [
    "mcp>=1.12.3",
]

[dependency-groups]
dev = [
    "build>=1.3.0",
    "fastapi>=0.116.1",
    "fastmcp>=2.12.3",
    "pre-commit>=4.3.0",
    "pre-commit-uv>=4.1.4",
    "pyright>=1.1.403",
    "pytest>=8.4.1",
    "pytest-asyncio>=1.1.0",
    "ruff>=0.12.8",
    "twine>=6.1.0",
    "uvicorn>=0.35.0",
]

[project.urls]
Repository = "https://github.com/sreenaths/minimcp"
PyPI = "https://pypi.org/project/minimcp/"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
target-version = "py310"
line-length = 120
exclude = ["README.md", "venv", ".venv"]

[tool.ruff.lint]
select = ["C4", "E", "F", "I", "PERF", "UP"]

[tool.ruff.format]
quote-style = "double"

[tool.markdown.lint]
MD029 = false
MD013 = false
MD033 = false
MD041 = false
