[project]
name = "minimcp"
version = "0.4.0"
description = "A minimal, stateless, and lightweight framework for building remote MCP servers."
authors = [{ name = "Sreenath Somarajapuram", email = "somarajapuram@gmail.com" }]
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
classifiers = [
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Framework :: AsyncIO",
    "Topic :: Software Development :: Libraries",
]

dependencies = [
    "mcp>=1.24.0",
]

[dependency-groups]
dev = [
    "pre-commit>=4.5.0",
    "psutil>=7.2.1",
    "pyright>=1.1.407",
    "pytest>=9.0.2",
    "pytest-cov>=7.0.0",
    "ruff>=0.14.9",
    "twine>=6.2.0",
]

[project.urls]
Repository = "https://github.com/cloudera/minimcp"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
target-version = "py310"
line-length = 120
exclude = ["README.md", "venv", ".venv"]

[tool.ruff.lint]
select = ["C4", "E", "F", "I", "PERF", "UP"]

[tool.ruff.format]
quote-style = "double"

[tool.pytest.ini_options]
markers = [
  "anyio: run this test with the AnyIO plugin",
]

[tool.markdown.lint]
MD029 = false
MD013 = false
MD033 = false
MD041 = false
