[workspace]
resolver = "2"
members = [
    "crates/minimcp",
    "crates/minimcp-bench-server",
]

[workspace.package]
edition = "2021"
rust-version = "1.81"
license = "Apache-2.0"
repository = "https://github.com/cloudera/minimcp"

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "io-std", "io-util", "sync", "time"] }
tracing = "0.1"
thiserror = "1"
